--- a/index.html
+++ b/index.html
@@ -1,137 +1,189 @@
+```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devloft Tecnologia LTDA - Portfólio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.22.10/babel.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #2563eb;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2rem;
+    }
+    .about {
+      background-color: #f3f4f6;
+      padding: 3rem 1rem;
+      text-align: center;
+    }
+    .about h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .about p {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.1rem;
+      color: #4b5563;
+    }
+    .portfolio {
+      padding: 3rem 1rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .portfolio h2 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .portfolio-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+    .portfolio-item {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      transition: transform 0.3s;
+    }
+    .portfolio-item:hover {
+      transform: scale(1.05);
+    }
+    .portfolio-item img {
+      width: 100%;
+      height: 150px;
+      object-fit: contain;
+      background-color: #e5e7eb;
+    }
+    .portfolio-item-content {
+      padding: 1.5rem;
+    }
+    .portfolio-item h3 {
+      font-size: 1.5rem;
+      margin: 0 0 0.5rem;
+    }
+    .portfolio-item p {
+      color: #4b5563;
+      margin: 0.5rem 0;
+    }
+    .portfolio-item a {
+      color: #2563eb;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .portfolio-item a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #2563eb;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      margin-top: 2rem;
+    }
+    footer h3 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      .portfolio-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div id="root"></div>
-  <script type="text/babel">
-    function Header() {
-      return (
-        <header className="bg-blue-600 text-white py-6">
-          <div className="container mx-auto px-4 text-center">
-            <h1 className="text-4xl font-bold">Devloft Tecnologia LTDA</h1>
-            <p className="mt-2 text-lg">Soluções digitais inovadoras com preços justos</p>
-          </div>
-        </header>
-      );
-    }
+  <header>
+    <h1>Devloft Tecnologia LTDA</h1>
+    <p>Soluções digitais inovadoras com preços justos</p>
+  </header>
 
-    function About() {
-      return (
-        <section className="py-12 bg-gray-100">
-          <div className="container mx-auto px-4">
-            <h2 className="text-3xl font-semibold text-center mb-6">Nossa História</h2>
-            <p className="text-lg text-gray-700 max-w-3xl mx-auto">
-              Fundada em 2024, a <strong>Devloft Tecnologia LTDA</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
-            </p>
-          </div>
-        </section>
-      );
-    }
+  <section class="about">
+    <h2>Nossa História</h2>
+    <p>
+      Fundada em 2024, a <strong>Devloft Tecnologia LTDA</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
+    </p>
+  </section>
 
-    function PortfolioItem({ title, url, category, description, logo }) {
-      return (
-        <div className="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105">
-          <div className="h-40 bg-gray-200 flex items-center justify-center">
-            <img src={logo} alt={`${title} logo`} className="h-24 object-contain" />
-          </div>
-          <div className="p-6">
-            <h3 className="text-xl font-semibold mb-2">{title}</h3>
-            <p className="text-gray-600 mb-2"><strong>Categoria:</strong> {category}</p>
-            <p className="text-gray-600 mb-4">{description}</p>
-            <a href={url} target="_blank" rel="noopener noreferrer" className="text-blue-600 font-semibold hover:underline">
-              Visitar Site
-            </a>
-          </div>
+  <section class="portfolio">
+    <h2>Nosso Portfólio</h2>
+    <div class="portfolio-grid">
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=Mandrake+Grifes" alt="Mandrake Grifes Logo">
+        <div class="portfolio-item-content">
+          <h3>Mandrake Grifes</h3>
+          <p><strong>Categoria:</strong> Loja de Roupas</p>
+          <p>Uma loja online de moda que oferece roupas modernas e estilosas para todos os públicos. Com design intuitivo, proporciona uma experiência de compra fluida e atrativa.</p>
+          <a href="https://mandrakegrifes.com.br" target="_blank">Visitar Site</a>
         </div>
-      );
-    }
-
-    function Portfolio() {
-      const projects = [
-        {
-          title: "Mandrake Grifes",
-          url: "https://mandrakegrifes.com.br",
-          category: "Loja de Roupas",
-          description: "Uma loja online de moda que oferece roupas modernas e estilosas para todos os públicos. Com design intuitivo, proporciona uma experiência de compra fluida e atrativa.",
-          logo: "https://via.placeholder.com/150x100.png?text=Mandrake+Grifes"
-        },
-        {
-          title: "No Hype CG",
-          url: "https://nohypecg.wuaze.com",
-          category: "Loja de Roupas",
-          description: "Loja virtual voltada para moda urbana e casual, com foco em qualidade e tendências contemporâneas. Ideal para quem busca estilo com praticidade.",
-          logo: "https://via.placeholder.com/150x100.png?text=No+Hype+CG"
-        },
-        {
-          title: "Mundo dos Esmaltes",
-          url: "https://mundodosesmaltes.wuaze.com",
-          category: "Loja de Produtos de Beleza",
-          description: "Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design vibrante.",
-          logo: "https://via.placeholder.com/150x100.png?text=Mundo+dos+Esmaltes"
-        },
-        {
-          title: "Hype Car Centro Automotivo",
-          url: "http://www.hypecarcentroautomotivo.wuaze.com",
-          category: "Loja de Mecânica",
-          description: "Site para serviços automotivos, oferecendo manutenção e reparos com agendamento online. Design funcional que reflete a confiabilidade do serviço.",
-          logo: "https://via.placeholder.com/150x100.png?text=Hype+Car"
-        },
-        {
-          title: "MP Cookies",
-          url: "https://mpcookies.wuaze.com",
-          category: "Loja de Alimentos",
-          description: "Loja online de cookies artesanais, com sabores únicos e personalizáveis. O site destaca a qualidade dos produtos com um design apetitoso e fácil de usar.",
-          logo: "https://via.placeholder.com/150x100.png?text=MP+Cookies"
-        }
-      ];
-
-      return (
-        <section className="py-12">
-          <div className="container mx-auto px-4">
-            <h2 className="text-3xl font-semibold text-center mb-6">Nosso Portfólio</h2>
-            <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-              {projects.map((project, index) => (
-                <PortfolioItem key={index} {...project} />
-              ))}
-            </div>
-          </div>
-        </section>
-      );
-    }
-
-    function Footer() {
-      return (
-        <footer className="bg-blue-600 text-white py-6">
-          <div className="container mx-auto px-4 text-center">
-            <h3 className="text-xl font-semibold mb-2">Entre em Contato</h3>
-            <p className="text-lg">Email: contato@devloft.com.br</p>
-            <p className="text-lg">Telefone: (11) 1234-5678</p>
-            <p className="mt-2">© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
-          </div>
-        </footer>
-      );
-    }
-
-    function App() {
-      return (
-        <div>
-          <Header />
-          <About />
-          <Portfolio />
-          <Footer />
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=No+Hype+CG" alt="No Hype CG Logo">
+        <div class="portfolio-item-content">
+          <h3>No Hype CG</h3>
+          <p><strong>Categoria:</strong> Loja de Roupas</p>
+          <p>Loja virtual voltada para moda urbana e casual, com foco em qualidade e tendências contemporâneas. Ideal para quem busca estilo com praticidade.</p>
+          <a href="https://nohypecg.wuaze.com" target="_blank">Visitar Site</a>
         </div>
-      );
-    }
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=Mundo+dos+Esmaltes" alt="Mundo dos Esmaltes Logo">
+        <div class="portfolio-item-content">
+          <h3>Mundo dos Esmaltes</h3>
+          <p><strong>Categoria:</strong> Loja de Produtos de Beleza</p>
+          <p>Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design vibrante.</p>
+          <a href="https://mundodosesmaltes.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=Hype+Car" alt="Hype Car Logo">
+        <div class="portfolio-item-content">
+          <h3>Hype Car Centro Automotivo</h3>
+          <p><strong>Categoria:</strong> Loja de Mecânica</p>
+          <p>Site para serviços automotivos, oferecendo manutenção e reparos com agendamento online. Design funcional que reflete a confiabilidade do serviço.</p>
+          <a href="http://www.hypecarcentroautomotivo.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=MP+Cookies" alt="MP Cookies Logo">
+        <div class="portfolio-item-content">
+          <h3>MP Cookies</h3>
+          <p><strong>Categoria:</strong> Loja de Alimentos</p>
+          <p>Loja online de cookies artesanais, com sabores únicos e personalizáveis. O site destaca a qualidade dos produtos com um design apetitoso e fácil de usar.</p>
+          <a href="https://mpcookies.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    ReactDOM.render(<App />, document.getElementById('root'));
-  </script>
+  <footer>
+    <h3>Entre em Contato</h3>
+    <p>Email: contato@devloft.com.br</p>
+    <p>Telefone: (11) 1234-5678</p>
+    <p>© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
+```
