--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     header p {
       font-size: 1.2rem;
     }
+    nav {
+      margin-top: 1rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.1rem;
+      margin: 0 1rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
     .about {
       background-color: #f3f4f6;
       padding: 3rem 1rem;
@@ -153,6 +165,10 @@
       header h1 {
         font-size: 2rem;
       }
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
+      }
       .portfolio-grid {
         grid-template-columns: 1fr;
       }
@@ -166,6 +182,10 @@
   <header>
     <h1>Devloft Tecnologia LTDA</h1>
     <p>Soluções digitais inovadoras com preços justos</p>
+    <nav>
+      <a href="index.html">Portfólio</a>
+      <a href="servicos.html">Serviços</a>
+    </nav>
   </header>
 
   <section class="about">
