--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       text-align: center;
       padding: 2rem;
     }
+    header img.logo {
+      max-height: 150px;
+      width: auto;
+      margin-bottom: 1rem;
+    }
     header h1 {
       font-size: 2.5rem;
       margin: 0;
@@ -162,6 +167,9 @@
       margin-right: 0.5rem;
     }
     @media (max-width: 600px) {
+      header img.logo {
+        max-height: 100px;
+      }
       header h1 {
         font-size: 2rem;
       }
@@ -180,6 +188,7 @@
 </head>
 <body>
   <header>
+    <img src="logoo.png" alt="Devloft Tecnologia LTDA Logo" class="logo">
     <h1>Devloft Tecnologia LTDA</h1>
     <p>Soluções digitais inovadoras com preços justos</p>
     <nav>
