--- a/index.html
+++ b/index.html
@@ -10,66 +10,71 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
+      background-color: #F9FAFB; /* Cinza claro para fundo neutro */
     }
     header {
-      background-color: #2563eb;
+      background-color: #1E3A8A; /* Azul escuro para harmonizar com logo */
       color: white;
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem;
     }
     header img.logo {
-      max-height: 150px;
+      max-height: 120px;
       width: auto;
-      margin-bottom: 1rem;
+      margin: 0 auto 0.5rem;
+      display: block;
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin: 0;
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      margin: 0.5rem 0;
     }
     nav {
-      margin-top: 1rem;
+      margin-top: 0.5rem;
     }
     nav a {
-      color: white;
+      color: #BFDBFE; /* Azul claro para links */
       text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1rem;
       margin: 0 1rem;
     }
     nav a:hover {
       text-decoration: underline;
     }
     .about {
-      background-color: #f3f4f6;
-      padding: 3rem 1rem;
+      background-color: #E5E7EB; /* Cinza mais suave */
+      padding: 2rem 1rem;
       text-align: center;
     }
     .about h2 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       margin-bottom: 1rem;
+      color: #1E3A8A;
     }
     .about p {
       max-width: 800px;
       margin: 0 auto;
-      font-size: 1.1rem;
-      color: #4b5563;
+      font-size: 1rem;
+      color: #4B5563;
     }
     .portfolio {
-      padding: 3rem 1rem;
+      padding: 2rem 1rem;
       max-width: 1200px;
       margin: 0 auto;
     }
     .portfolio h2 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
+      color: #1E3A8A;
     }
     .portfolio-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
+      gap: 1.5rem;
     }
     .portfolio-item {
       background-color: white;
@@ -85,14 +90,14 @@
       width: 100%;
       height: 150px;
       object-fit: contain;
-      background-color: #e5e7eb;
+      background-color: #E5E7EB;
     }
     .portfolio-item-homepage {
       padding: 1rem;
-      background-color: #f9fafb;
+      background-color: #F9FAFB;
       font-size: 0.9rem;
-      color: #4b5563;
-      border-bottom: 1px solid #e5e7eb;
+      color: #4B5563;
+      border-bottom: 1px solid #E5E7EB;
     }
     .portfolio-item-content {
       padding: 1.5rem;
@@ -100,13 +105,14 @@
     .portfolio-item h3 {
       font-size: 1.5rem;
       margin: 0 0 0.5rem;
+      color: #1E3A8A;
     }
     .portfolio-item p {
-      color: #4b5563;
+      color: #4B5563;
       margin: 0.5rem 0;
     }
     .portfolio-item a {
-      color: #2563eb;
+      color: #1E90FF; /* Azul vibrante para links */
       font-weight: bold;
       text-decoration: none;
     }
@@ -114,10 +120,10 @@
       text-decoration: underline;
     }
     footer {
-      background-color: #2563eb;
+      background-color: #1E3A8A;
       color: white;
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem;
       margin-top: 2rem;
     }
     footer h3 {
@@ -144,22 +150,22 @@
       transition: background-color 0.3s;
     }
     .whatsapp-button {
-      background-color: #25D366;
+      background-color: #25D366; /* Verde WhatsApp */
     }
     .whatsapp-button:hover {
-      background-color: #20b358;
+      background-color: #20B358;
     }
     .instagram-button {
-      background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+      background: linear-gradient(45deg, #F09433, #E6683C, #DC2743, #CC2366, #BC1888); /* Gradiente Instagram */
     }
     .instagram-button:hover {
       opacity: 0.9;
     }
     .gmail-button {
-      background-color: #D14836;
+      background-color: #D14836; /* Vermelho Gmail */
     }
     .gmail-button:hover {
-      background-color: #c13524;
+      background-color: #C13524;
     }
     .contact-buttons img {
       width: 20px;
@@ -168,10 +174,13 @@
     }
     @media (max-width: 600px) {
       header img.logo {
-        max-height: 100px;
+        max-height: 80px;
       }
       header h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
+      }
+      header p {
+        font-size: 0.9rem;
       }
       nav a {
         display: block;
