--- a/servicos.html
+++ b/servicos.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -49,46 +10,55 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
+      background-color: #F9FAFB; /* Cinza claro para fundo neutro */
     }
     header {
-      background-color: #2563eb;
+      background-color: #1E3A8A; /* Azul escuro para harmonizar com logo */
       color: white;
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem;
+    }
+    header img.logo {
+      max-height: 120px;
+      width: auto;
+      margin: 0 auto 0.5rem;
+      display: block;
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin: 0;
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      margin: 0.5rem 0;
     }
     nav {
-      margin-top: 1rem;
+      margin-top: 0.5rem;
     }
     nav a {
-      color: white;
+      color: #BFDBFE; /* Azul claro para links */
       text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1rem;
       margin: 0 1rem;
     }
     nav a:hover {
       text-decoration: underline;
     }
     .services {
-      padding: 3rem 1rem;
+      padding: 2rem 1rem;
       max-width: 1200px;
       margin: 0 auto;
     }
     .services h2 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
+      color: #1E3A8A;
     }
     .services-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
+      gap: 1.5rem;
     }
     .service-item {
       background-color: white;
@@ -104,7 +74,7 @@
       width: 100%;
       height: 150px;
       object-fit: cover;
-      background-color: #e5e7eb;
+      background-color: #E5E7EB;
     }
     .service-item-content {
       padding: 1.5rem;
@@ -112,21 +82,22 @@
     .service-item h3 {
       font-size: 1.5rem;
       margin: 0 0 0.5rem;
+      color: #1E3A8A;
     }
     .service-item p {
-      color: #4b5563;
+      color: #4B5563;
       margin: 0.5rem 0;
     }
     .service-item .price {
       font-size: 1.2rem;
       font-weight: bold;
-      color: #2563eb;
+      color: #1E90FF; /* Azul vibrante para preços */
     }
     footer {
-      background-color: #2563eb;
+      background-color: #1E3A8A;
       color: white;
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem;
       margin-top: 2rem;
     }
     footer h3 {
@@ -156,10 +127,10 @@
       background-color: #25D366;
     }
     .whatsapp-button:hover {
-      background-color: #20b358;
+      background-color: #20B358;
     }
     .instagram-button {
-      background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+      background: linear-gradient(45deg, #F09433, #E6683C, #DC2743, #CC2366, #BC1888);
     }
     .instagram-button:hover {
       opacity: 0.9;
@@ -168,7 +139,7 @@
       background-color: #D14836;
     }
     .gmail-button:hover {
-      background-color: #c13524;
+      background-color: #C13524;
     }
     .contact-buttons img {
       width: 20px;
@@ -176,8 +147,14 @@
       margin-right: 0.5rem;
     }
     @media (max-width: 600px) {
+      header img.logo {
+        max-height: 80px;
+      }
       header h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
+      }
+      header p {
+        font-size: 0.9rem;
       }
       nav a {
         display: block;
@@ -194,6 +171,7 @@
 </head>
 <body>
   <header>
+    <img src="logoo.png" alt="Devloft Tecnologia LTDA Logo" class="logo">
     <h1>Devloft Tecnologia LTDA</h1>
     <p>Soluções digitais inovadoras com preços justos</p>
     <nav>
