--- a/servicos.html
+++ b/servicos.html
@@ -80,7 +80,7 @@
       height: 150px;
       object-fit: cover;
       background-color: #E5E7EB;
-      border-radius: 50%; /* Imagens redondas */
+      /* Removido border-radius: 50% para formato retangular padrão */
     }
     .service-item-content {
       padding: 1.5rem;
@@ -194,8 +194,8 @@
     <h2>Nossos Serviços</h2>
     <div class="services-grid">
       <div class="service-item">
-        <!-- Imagem: Pexels, https://www.pexels.com/photo/laptop-showing-website-on-screen-6953879/ -->
-        <img src="https://images.pexels.com/photos/6953879/pexels-photo-6953879.jpeg" alt="Site Simples">
+        <!-- Imagem: Unsplash, https://unsplash.com/photos/laptop-with-simple-website-on-screen-6g0KjwQszMI -->
+        <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085" alt="Site Simples">
         <div class="service-item-content">
           <h3>Site Simples</h3>
           <p>Perfeito para negócios locais, com até 10 páginas, formulário de contato e design responsivo. Ideal para começar online.</p>
@@ -203,8 +203,8 @@
         </div>
       </div>
       <div class="service-item">
-        <!-- Imagem: Unsplash, https://unsplash.com/photos/black-shopping-cart-icon-on-white-background-oTKF3N_B1kU -->
-        <img src="https://images.unsplash.com/photo-1592489635298-e99e075a0a4b" alt="Site E-commerce">
+        <!-- Imagem: Pexels, https://www.pexels.com/photo/e-commerce-website-on-laptop-4065894/ -->
+        <img src="https://images.pexels.com/photos/4065894/pexels-photo-4065894.jpeg" alt="Site E-commerce">
         <div class="service-item-content">
           <h3>Site de E-commerce</h3>
           <p>Loja virtual com catálogo, carrinho, pagamentos online e gerenciamento fácil. Comece a vender seus produtos hoje!</p>
@@ -212,8 +212,8 @@
         </div>
       </div>
       <div class="service-item">
-        <!-- Imagem: Pexels, https://www.pexels.com/photo/mockup-of-a-modern-website-on-a-laptop-6953880/ -->
-        <img src="https://images.pexels.com/photos/6953880/pexels-photo-6953880.jpeg" alt="Site Personalizado">
+        <!-- Imagem: Unsplash, https://unsplash.com/photos/custom-website-design-on-monitor-CImCzCya8SU -->
+        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3" alt="Site Personalizado">
         <div class="service-item-content">
           <h3>Site Personalizado</h3>
           <p>Site sob medida com design único e funcionalidades avançadas, como integrações com APIs ou formulários dinâmicos.</p>
@@ -221,8 +221,8 @@
         </div>
       </div>
       <div class="service-item">
-        <!-- Imagem: Unsplash, https://unsplash.com/photos/person-using-laptop-with-dashboard-on-screen-8pb7Hq539Zw -->
-        <img src="https://images.unsplash.com/photo-1614064641938-3bbee52942e7" alt="Sistema Web Simples">
+        <!-- Imagem: Pexels, https://www.pexels.com/photo/simple-web-system-dashboard-6696150/ -->
+        <img src="https://images.pexels.com/photos/6696150/pexels-photo-6696150.jpeg" alt="Sistema Web Simples">
         <div class="service-item-content">
           <h3>Sistema Web Simples</h3>
           <p>Painel administrativo para gerenciar clientes, pedidos ou dados, com login seguro e relatórios básicos.</p>
@@ -230,8 +230,8 @@
         </div>
       </div>
       <div class="service-item">
-        <!-- Imagem: Pexels, https://www.pexels.com/photo/dashboard-on-computer-screen-1181298/ -->
-        <img src="https://images.pexels.com/photos/1181298/pexels-photo-1181298.jpeg" alt="Sistema Web Intermediário">
+        <!-- Imagem: Unsplash, https://unsplash.com/photos/advanced-web-system-dashboard-tZCrFpSNiIQ -->
+        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f" alt="Sistema Web Intermediário">
         <div class="service-item-content">
           <h3>Sistema Web Intermediário</h3>
           <p>CRM ou sistema robusto com dashboards, notificações e integrações, ideal para otimizar processos.</p>
@@ -239,8 +239,8 @@
         </div>
       </div>
       <div class="service-item">
-        <!-- Imagem: Unsplash, https://unsplash.com/photos/digital-marketing-tools-on-screen-7oS_6W63e0o -->
-        <img src="https://images.unsplash.com/photo-1551288049-bcc0d03a72a1" alt="Serviços Adicionais">
+        <!-- Imagem: Pexels, https://www.pexels.com/photo/digital-marketing-tools-4467858/ -->
+        <img src="https://images.pexels.com/photos/4467858/pexels-photo-4467858.jpeg" alt="Serviços Adicionais">
         <div class="service-item-content">
           <h3>Serviços Adicionais</h3>
           <p>Domínio (R$ 40–R$ 150/ano), hospedagem (R$ 10–R$ 300/mês), manutenção (R$ 80–R$ 1.500/mês), SEO (R$ 800–R$ 3.000).</p>
