--- a/servicos.html
+++ b/servicos.html
@@ -222,7 +222,7 @@
       </div>
       <div class="service-item">
         <!-- Imagem: Pexels, https://www.pexels.com/photo/simple-web-system-dashboard-6696150/ -->
-        <img src="https://images.pexels.com/photos/6696150/pexels-photo-6696150.jpeg" alt="Sistema Web Simples">
+        <img src="https://images.pexels.com/photos/7688337/pexels-photo-7688337.jpeg">
         <div class="service-item-content">
           <h3>Sistema Web Simples</h3>
           <p>Painel administrativo para gerenciar clientes, pedidos ou dados, com login seguro e relatórios básicos.</p>
